style: fix grid alignments selectively avoiding home page breakages

--- a/src/components/services.module.css
+++ b/src/components/services.module.css
@@ -67,14 +67,24 @@
     gap: 3rem;
 }
 
+.cardsColumn4 {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    gap: 3rem;
+}
+
 @media (max-width: 1024px) {
-    .cardsColumn {
+
+    .cardsColumn,
+    .cardsColumn4 {
         grid-template-columns: 1fr 1fr;
     }
 }
 
 @media (max-width: 600px) {
-    .cardsColumn {
+
+    .cardsColumn,
+    .cardsColumn4 {
         grid-template-columns: 1fr;
     }
 }
